deployment-ingress-simple/svc-my-app-api-1.0.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-api-svc
  namespace: demo
spec:
  type: NodePort #ClusterIP
  selector:
    app: my-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8088 # puertos que usan los pods
# Node port para referenciarlo con el ingreess

# kubectl exec -it pod-name -- sh
# apk add --no-cache curl
# curl cluster-ip:80
# -> cluster-ip es el valor de clusterIP en tu servicio.
